<package format="2">
  <name>mk_odometry</name>
  <version>1.0.0</version>
  <description>
  Odometry nodes
  </description>
  <maintainer email="german.m.garcia@gmail.com">German Martin</maintainer>
  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
